--- a/code/template.ipynb
+++ b/code/template.ipynb
@@ -46,7 +46,7 @@
     "# custom\n",
     "import known\n",
     "from known.basic import pj\n",
-    "from known.basic.common import Verbose as verb\n",
+    "from known.basic import Verbose as verb\n",
     "import known.ktorch as kt\n",
     "\n",
     "print(f'{sys.version=}\\n{np.__version__=}\\n{tt.__version__=}\\n{known.__version__=}')\n",
@@ -72,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
